JNLP build moved to sqljet-distribution
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1090 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/sqljet-distribution/src/main/site/tutorial.html
+++ b/sqljet-distribution/src/main/site/tutorial.html
@@ -22,7 +22,7 @@
  
  <h2>Contents</h2>
  <p>This page provides very simple tutorial on how to use SQLJet API to work with the database of SQLite format. The following operations are described: </p><ul><li>Create new database and configure options </li><li>Create table and indices </li><li>Insert records </li><li>Select records in order specified by index </li><li>Lookup records matching scope or exact value </li><li>Update and delete records </li><li>Drop table and index </li></ul><p>Full working source code of this example is available as part of SQLJet project in Subversion repository at 
- <a href="http://svn.sqljet.com/repos/sqljet/tags/${buildVersion.baseVersion}/sqljet-example-simple/src/main/java/org/tmatesoft/sqljet/examples/tutorial/Tutorial.java" rel="nofollow">Tutorial.java</a>. </p>
+ <a href="http://svn.sqljet.com/repos/sqljet/tags/${version}/sqljet-example-simple/src/main/java/org/tmatesoft/sqljet/examples/tutorial/Tutorial.java" rel="nofollow">Tutorial.java</a>. </p>
  
  <h2>Create new database</h2>
 
