Site generator now uses current year when generates web pages.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1097 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/sqljet-distribution/src/main/site/tutorial.html
+++ b/sqljet-distribution/src/main/site/tutorial.html
@@ -188,7 +188,7 @@ CREATE INDEX dob_index ON employees(date_of_birth)</pre><p>And the following cod
   }</pre><p>Above code gets names of all tables stored in the database and list of indices for each table, then drops those indices and tables. It is not necessary to drop first indices and then table - dropping table deletes indices automatically. <tt>ISqlJetTableDef</tt> and <tt>ISqlJetIndexDef</tt> objects provides detailed information of table and index including all names, fields and their types. </p> 
   
   <div id="footer">
-    <div id="copyright">Copyright &copy; 2004-2009, TMate Software</div>
+    <div id="copyright">Copyright &copy; 2004-${project.thisYear}, TMate Software</div>
     <div id="java">Java&trade; and all Java-based marks are a trademark or registered trademark of
       Sun Microsystems, Inc. in the United States and other countries.<br/>
       TMate Software and the website sqljet.com are independent of Sun Microsystems,
