--- a/sqljet-distribution/src/main/site/index.html
+++ b/sqljet-distribution/src/main/site/index.html
@@ -76,7 +76,7 @@
           </ul>
       <p></p>
   <div id="footer">
-    <div id="copyright">Copyright &copy; 2004-2010, TMate Software</div>
+    <div id="copyright">Copyright &copy; 2004-${project.thisYear}, TMate Software</div>
     <div id="java">Java&trade; and all Java-based marks are a trademark or registered trademark of
       Sun Microsystems, Inc. in the United States and other countries.<br/>
       TMate Software and the website sqljet.com are independent of Sun Microsystems,
